When the user presses tab to enter the next textarea, also `toggleLocaleActions`

--- a/app/views/locale_lab/translations/_translation_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translation_with_key.html.erb
@@ -44,6 +44,7 @@
           input->autogrow#grow
           change->autogrow#grow
           paste->autogrow#grow
+          focus->key-overview#toggleLocaleActions
           blur->translation-value#submitIfChanged
           input->translation-value#toggleDiscardButton
         ].join(' ') } %>
