--- a/app/views/locale_lab/translations/_translations_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translations_with_key.html.erb
@@ -8,7 +8,7 @@ current = parts.pop
   <ul class="key-header">
     <li class="key-label">
       <% parts.each.with_index do |part, index| %>
-        <%= link_to part, locale_lab.translation_path(parts[0..index].join('.')), tabindex: '-1' %>
+        <%= link_to part, locale_lab.translation_path(parts[0..index].join('.')), tabindex: '-1', data: { turbo: false } %>
         <span>.</span>
       <% end %>
       <strong><%= current %></strong>
