Basic dialog outlines

--- a/app/assets/stylesheets/locale_lab/application.css
+++ b/app/assets/stylesheets/locale_lab/application.css
@@ -22,3 +22,4 @@
 @import "components/keys-overview.css";
 @import "components/key.css";
 @import "components/editor.css";
+@import "components/dialog.css";
