--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -20,8 +20,9 @@
             </li>
 
             <li class="choice">
-              <%= f.check_box :force, id: "force_checkbox" %>
-              <%= f.label :force, t('.force'), for: "force_checkbox" %>
+              <%= label_tag do %>
+                <%= f.check_box :force %> <%= t('.force') %>
+              <% end %>
             </li>
           </ul>
 
