--- a/app/assets/stylesheets/locale_lab/components/dialog.css
+++ b/app/assets/stylesheets/locale_lab/components/dialog.css
@@ -1,6 +1,7 @@
 .dialog {
   width: 100%;
   max-width: 700px;
+  padding: var(--base-size-16);
 
   form {
 
@@ -26,11 +27,11 @@
       }
 
       li.choice {
-        display: flex;
-        align-items: center;
 
         label {
-          margin: 0;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
         }
 
         input[type="checkbox"] {
@@ -41,10 +42,15 @@
     }
 
     ul.actions {
+      display: flex;
 
       li {
         margin-right: var(--base-size-8);
       }
     }
   }
+}
+
+.dialog.editor {
+  max-width: 960px;
 }
